@@ -171,6 +171,8 @@ tests = [
 		'Pop_fitzHughNagumoCell[0]/V':     { 'type': 'box', 'dt': 0.000001, 'dv': 0.000100 },
 		'Pop_fitzHughNagumo1969Cell[0]/V': { 'type': 'box', 'dt': 0.000001, 'dv': 0.000100 },
 		# 'Pop_pinskyRinzelCA3Cell[0]/Vs': { 'type': 'box', 'dt': 0.000020, 'dv': 0.000100 },
+		'Pop_hindmarshRose1984Cell[0]/v': { 'type': 'box', 'dt': 0.000020, 'dv': 0.000100 },
+		
 		'Pop_IF_curr_alpha[0]/v' : { 'type': 'box', 'dt': 0.000100, 'dv': 0.000100 },
 		'Pop_IF_curr_exp[0]/v'   : { 'type': 'box', 'dt': 0.000100, 'dv': 0.000100 },
 		'Pop_IF_cond_alpha[0]/v' : { 'type': 'box', 'dt': 0.000100, 'dv': 0.000100 },
@@ -181,17 +183,18 @@ tests = [
 		# 'Pop_iafTauCell_Quadratic[0]/v'     : { 'type': 'box', 'dt': 0.000020, 'dv': 0.000100 },
 		'Pop_iafTauCell_Quadratic[0]/v'     : { 'type': 'box', 'dt': 0.000020, 'dv': 0.000100 },
 		
-		"Pop_iafTauCell[0]"        :  {'type': 'samecount_box', 'dt': 0.00001001 },
-		"Pop_iafTauRefCell[0]"     :  {'type': 'samecount_box', 'dt': 0.00002001 },
-		"Pop_iafCell[0]"           :  {'type': 'samecount_box', 'dt': 0.00001001 },
-		"Pop_iafRefCell[0]"        :  {'type': 'samecount_box', 'dt': 0.00010001 },
-		# "Pop_izhikevichCell[0]"    :  {'type': 'samecount_box', 'dt': 0.00001001 },
-		"Pop_izhikevich2007Cell[0]":  {'type': 'samecount_box', 'dt': 0.0015001 },
-		# "Pop_adExIaFCell[0]"       :  {'type': 'samecount_box', 'dt': 0.00001001 },
-		"Pop_IF_curr_alpha[0]"     :  {'type': 'samecount_box', 'dt': 0.00001001 },
-		"Pop_IF_curr_exp[0]"       :  {'type': 'samecount_box', 'dt': 0.00001001 },
-		"Pop_IF_cond_alpha[0]"     :  {'type': 'samecount_box', 'dt': 0.00001001 },
-		"Pop_IF_cond_exp[0]"       :  {'type': 'samecount_box', 'dt': 0.00001001 },
+		"Pop_iafTauCell[0]"        : {'type': 'samecount_box', 'dt': 0.00001001 },
+		"Pop_iafTauRefCell[0]"     : {'type': 'samecount_box', 'dt': 0.00002001 },
+		"Pop_iafCell[0]"           : {'type': 'samecount_box', 'dt': 0.00001001 },
+		"Pop_iafRefCell[0]"        : {'type': 'samecount_box', 'dt': 0.00010001 },
+		# "Pop_izhikevichCell[0]"    : {'type': 'samecount_box', 'dt': 0.00001001 },
+		"Pop_izhikevich2007Cell[0]"   : {'type': 'samecount_box', 'dt': 0.0015001 },
+		"Pop_hindmarshRose1984Cell[0]": {'type': 'samecount_box', 'dt': 0.0015001 },
+		# "Pop_adExIaFCell[0]"       : {'type': 'samecount_box', 'dt': 0.00001001 },
+		"Pop_IF_curr_alpha[0]"     : {'type': 'samecount_box', 'dt': 0.00001001 },
+		"Pop_IF_curr_exp[0]"       : {'type': 'samecount_box', 'dt': 0.00001001 },
+		"Pop_IF_cond_alpha[0]"     : {'type': 'samecount_box', 'dt': 0.00001001 },
+		"Pop_IF_cond_exp[0]"       : {'type': 'samecount_box', 'dt': 0.00001001 },
 	},
 },
 {
